--- a/styles.css
+++ b/styles.css
@@ -630,7 +630,6 @@ footer {
   width: 100%;
   height: 6rem;
   font-size: 1rem;
-  position: absolute;
   h2 {
     padding: 2rem;
     position: relative;
